@@ -4,13 +4,8 @@ set(FASP_BASE_SRC_DIR "src")
 set(FASP_EXTRA_SRC_DIR "extra")
 #
 file(GLOB FASP_EXTRA_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}  
-	  		     	      ${FASP_EXTRA_SRC_DIR}/sparsekit/ilu.f 
-	  		     	      ${FASP_EXTRA_SRC_DIR}/sparsekit/ilu_c.c 
-				      ${FASP_EXTRA_SRC_DIR}/interface/interface_umfpack.c
-				      ${FASP_EXTRA_SRC_DIR}/interface/interface_superlu.c
-				      ${FASP_EXTRA_SRC_DIR}/interface/interface_mumps.c
-                                      ${FASP_EXTRA_SRC_DIR}/interface/interface_pardiso.c
-				      ${FASP_EXTRA_SRC_DIR}/hb_io/hb_io.c)
+				      ${FASP_EXTRA_SRC_DIR}/interface/*.c
+				      ${FASP_EXTRA_SRC_DIR}/hb_io/*.c)
 #
 file(GLOB FASP_BASE_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} 
 	  		    	     ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h
